<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="search">Search</string>
    <string name="flights">Flights</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="hotels">Hotels</string>
    <string name="origin">Origin</string>
    <string name="travellers">Travellers</string>
    <string name="adults">Adults</string>
    <string name="childs">Childs</string>
    <string name="children">Children</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="destination">Destination</string>
    <string name="sign_in">Sign In</string>
    <string name="letsstarted">Let’s get started</string>
    <string name="login_desc">Sign in to see deals up to 50%, easy manage your current bookings, and so much more…</string>
    <string name="sign_with_facebook">Sign in with facebook</string>
    <string name="sign_with_google">Sign in with Google</string>
    <string name="sign_with_email">Sign in with Email</string>
    <string name="or">Or</string>
    <string name="create_account">Create your account</string>
    <string name="example_destination">15 km</string>
    <string name="more_dates">More Dates To This Hotel</string>
    <string name="book">Book</string>
    <string name="flights_details">Flight details</string>
    <string name="boarding">Boarding</string>
    <string name="room_type">Room type</string>
    <string name="transfer">Transfer</string>
    <string name="adult">Adult</string>
    <string name="pay_with">Pay with</string>
    <string name="pay_method">Payment method</string>
    <string name="add">Add</string>
    <string name="kid">Kid</string>
    <string name="customer_purchase_form">Customer purchase form</string>
    <string name="login_email_desc">We’ll use this to sign you in or to create an account if you don’t have one yet.</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email address</string>
    <string name="next">Continue</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_password_desc">Enter your Lastmin Club password for</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="my_orders">My Orders</string>
    <string name="personal_data">Personal Data</string>
    <string name="co_travellers">Co-Travellers</string>
    <string name="change_pass">Change Password</string>
    <string name="sign_out">Sign out</string>
    <string name="message_sign_out">You are signed out</string>
    <string name="forgot_pass_desc">No problem! We’ll send you a link to reset it. Enter the email address you use to sign in to Lastmin Club.</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="app_name">Lastmin Club</string>
    <string name="create_password">Create a password</string>
    <string name="pass_char">Has as least 10 characters</string>
    <string name="pass_number">Contains at least one number</string>
    <string name="pass_upper">Contains at least one uppercase latter</string>
    <string name="pass_lower">Contains at least one lowercase latter</string>
    <string name="confirm_password">Confirm password</string>
    <string name="example_profile_name">Ingrīda Sokolova</string>
    <string name="example_order_ref">Order Ref # 134256</string>
    <string name="travel_docs">Travel Documents</string>
    <string name="order_confirmation">Lastmin Order Confirmation</string>
    <string name="order_invoice">Lastmin Invoice</string>
    <string name="order_vaucher">Kaya Palazzo Vaucher</string>
    <string name="order_ticket_1">RIX - AYT 21.05.21 Tickets</string>
    <string name="order_ticket_2">AYT - RIX 28.05.21 Tickets</string>
    <string name="order_transfer_confirmation">Transfer Order Confirmation</string>
    <string name="order_insurance_police">BTA Insurance police</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="save_to_files">Save to Files</string>
    <string name="print">Print</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="main_info">Main info</string>
    <string name="tour_general">• opened 2002, last renovated 2014 – 2017  \n\n• local classification: 5 *  \n\n• area 186 000 m2  \n\n• There are 770 rooms in the two main buildings and in the villas on the 2 to 3 floors  \n\n• 6 lifts</string>
    <string name="general">General</string>
    <string name="restaraunts">Restaurants</string>
    <string name="tour_restaurants">• 6 à la carte restaurants, 4 of which are available for an additional fee  \n\n• 9 bars, 2 of them for guests staying in villas  \n\n• appetizer restaurant, cafe, ice cream parlor</string>
    <string name="hotel_desc">Hotel description</string>
    <string name="example_date">Saturday, 26 June 2021</string>
    <string name="example_flight_name_1">Vilnius</string>
    <string name="example_flight_name_2">Antalya</string>
    <string name="example_flight_name_common">Vilnius - Antalya</string>
    <string name="example_cost">€350</string>
    <string name="example_duration">7 h 20 min</string>
    <string name="example_time_start">3:40</string>
    <string name="example_time_end">20:40</string>
    <string name="example_abb_start">VNO</string>
    <string name="example_abb_end">AYT</string>
    <string name="example_stops">Stops: 2</string>
    <string name="example_abb_stops">FRA, LAX</string>
    <string name="example_adult_kid">2 Adults, 1 Kid</string>
    <string name="add_nearby_airports">Add Nearby Airports</string>
    <string name="best">The Best</string>
    <string name="cheapest">The Cheapest</string>
    <string name="quickest">The Quickest</string>
    <string name="baggage">Baggage</string>
    <string name="checked">Checked</string>
    <string name="cabin">Cabin</string>
    <string name="route">Route</string>
    <string name="duration_max">Maximum duration</string>
    <string name="stops_max">"Maximum stops "</string>
    <string name="hours">Hours</string>
    <string name="exclude_countries">"Exclude countries "</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone number</string>
    <string name="passport">Passport</string>
    <string name="number">Number</string>
    <string name="country">Issue Country</string>
    <string name="doe">Date of expiry</string>
    <string name="save">Save</string>
    <string name="add_new">Add New</string>
    <string name="current">Current</string>
    <string name="pass_new">New</string>
    <string name="change">Change</string>
    <string name="sign_up">Sign Up</string>
    <string name="child_period">2 - 17 years old</string>
    <string name="child_1">1st Child’s Age</string>
    <string name="childs_age">Child’s Age</string>
    <string name="flights_search_opts">Flight Search Options</string>
    <string name="example_date_range">21.05.-27.05</string>
    <string name="tours">Tours</string>
    <string name="display_variant">Hotel Image size in listing</string>
    <string name="big">Big</string>
    <string name="small">Small</string>
    <string name="sort_by">Sort By</string>
    <string name="popularity">Popularity</string>
    <string name="price_lower">Price (lowest first)</string>
    <string name="price_higher">Price (highest first)</string>
    <string name="view">View</string>
    <string name="direct">Direct</string>
    <string name="example_airport">Vilnus International Airport (VNO)</string>
    <string name="example_company">AirBaltic</string>
    <string name="example_class">Economy</string>
    <string name="example_flight_connection">Flight connection: 3h 25min</string>
    <string name="flight_connection">Flight connection:</string>
    <string name="baggage_recheck">Baggage must be re-checked</string>
    <string name="baggage_self_transfer">Self-transfer of baggage at the transfer airport CPH</string>
    <string name="example_arrival">Arrival on next day</string>
    <string name="select_flight">Select this flight</string>
    <string name="seating_info">Seating info</string>
    <string name="flight_no">Flight no</string>
    <string name="seat_pitch">Seat pitch</string>
    <string name="seat_width">Seat width</string>
    <string name="seat_recline">Seat recline</string>
    <string name="seat_audio_video"><![CDATA[Audio & video on demand]]></string>
    <string name="seat_power">In-seat power</string>
    <string name="seat_wifi">Wi-Fi on board</string>
    <string name="add_more">Add more</string>
    <string name="do_not_fly">Do not fly via those countries</string>
    <string name="add_new_card">Add new card</string>
    <string name="expiry">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="post_code">Post code</string>
    <string name="card_number">Card number</string>
    <string name="example_card_number">Visa •••• 1540</string>
    <string name="example_card_expiry">09/23</string>
    <string name="pay">Pay</string>
    <string name="mtrl_picker_confirm" tools:override="true">Ok</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="incorrect_password">Wrong password</string>
    <string name="server_client_id" translatable="false">839600337584-gi3rflof9glmbdf6uebg1fhdptjpvp2s.apps.googleusercontent.com</string>

    <string name="facebook_app_id" translatable="false">282871512422025</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb282871512422025</string>
    <string name="add_new_photo">Add new Photo</string>
    <string name="open_photo">Open Photo</string>
    <string name="permission_storage_denied">Permission denied to read your External storage</string>
    <string name="error_old_pass_empty">Old password cannot be empty</string>
    <string name="error_pass_diff">Password mismatch</string>
    <string name="departure_date"><![CDATA[Departure Date & Duration]]></string>
    <string name="example_error">An error has occurred!</string>
    <string name="try_again">Try Again</string>
    <string name="error_not_choosed">Not choosed</string>
    <string name="required">Required</string>
    <string name="km">km</string>
</resources>