<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search_24_px"
        />

    <item
        android:id="@+id/fligthsFragment"
        android:title="@string/flights"
        android:icon="@drawable/ic_icon_travel_flight_24_px"
    />

    <item
        android:id="@+id/hotelsFragment"
        android:title="@string/hotels"
        android:icon="@drawable/ic_icon_travel_bed_24_px"
        />

    <item
        android:id="@+id/savedFragment"
        android:title="@string/saved"
        android:icon="@drawable/ic_icon_action_favorite"
        />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_icon_travel_person_outline_24_px"
        />

</menu>