<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_marginTop="?android:actionBarSize"
        >


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GreenText.Small"
            android:text="@string/sort_by"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            />

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin_10"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                >

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    style="@style/DarkText"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    />

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_lower"
                    style="@style/DarkText"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    />

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_higher"
                    style="@style/DarkText"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    />

        </RadioGroup>
    </RadioGroup>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/def_margin"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GreenText.Small"
            android:text="@string/display_variant"
            android:layout_marginTop="@dimen/def_margin"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            />

    <RadioGroup
            android:id="@+id/rg_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin_10"
                android:layout_marginStart="@dimen/big_margin"
                android:layout_marginEnd="@dimen/big_margin"
                >

            <RadioButton
                    android:id="@+id/rb_big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/big"
                    style="@style/DarkText"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    />

            <RadioButton
                    android:id="@+id/rb_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/small"
                    style="@style/DarkText"
                    android:layoutDirection="rtl"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    />

        </RadioGroup>
    </RadioGroup>

    <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginTop="@dimen/def_margin"
            />
</LinearLayout>