<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sky_gradient"
        >

    <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_logo_trans"
            />

    <TextView
            android:id="@+id/tv_lets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letsstarted"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/big_margin"
            style="@style/white_text_big"
            />

    <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_desc"
            android:layout_below="@+id/tv_lets"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            style="@style/white_text_small"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            />

    <LinearLayout
            android:id="@+id/lin_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tv_desc"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginTop="@dimen/def_margin"
            >

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/sign_with_facebook"
                android:textColor="@color/main_green"
                android:drawableLeft="@drawable/ic_facebook_app_logo"
                android:layout_marginTop="@dimen/min_margin"
                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/sign_with_google"
                android:textColor="@color/main_green"
                android:drawableLeft="@drawable/ic_google"
                android:layout_marginTop="@dimen/min_margin"

                />
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/sign_with_email"
                android:textColor="@color/main_green"
                android:drawableLeft="@drawable/ic_icon_social_email"
                android:layout_marginTop="@dimen/min_margin"

                />

    </LinearLayout>

    <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_below="@+id/lin_btns"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            style="@style/white_text_medium"
            android:layout_above="@+id/btn_create"
            />

    <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/create_account"
            android:textColor="@color/main_green"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/big_margin"
            />
</RelativeLayout>