<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/def_margin"
        >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/def_margin"
            >


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_marginStart="90dp"
                >

            <TextView
                    android:id="@+id/tv_flight_connection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_flight_connection"
                    style="@style/DarkText"
                    />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baggage_recheck"
                    style="@style/DarkText.Small"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baggage_self_transfer"
                    android:layout_marginTop="@dimen/min_margin_10"
                    style="@style/DarkText.Small"
                    />
        </LinearLayout>

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            android:layout_marginTop="@dimen/min_margin_10"
            />
</LinearLayout>