<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_marginTop="?android:actionBarSize"
        >

    <TextView
            android:id="@+id/tv_pass_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password_desc"
            style="@style/DarkText"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_icon_content_lock"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginTop="@dimen/def_margin"
            >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginTop="@dimen/def_margin"
            >

        <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                />

        <ProgressBar
                android:id="@+id/progress"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_in"
                android:elevation="20dp"
                android:visibility="gone"
                />
    </RelativeLayout>

    <TextView
            android:id="@+id/btn_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/main_green"
            android:paddingBottom="@dimen/def_margin"
            android:background="@android:color/transparent"
            android:text="@string/forgot_pass"
            android:gravity="start"
            android:textAllCaps="true"
            android:layout_margin="@dimen/medium_margin"
            android:fontFamily="@font/roboto_medium"
            />

</LinearLayout>